--- a/reservas/main/templates/main/base.html
+++ b/reservas/main/templates/main/base.html
@@ -7,7 +7,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://kit.fontawesome.com/08a72f5c5b.js" crossorigin="anonymous"></script>
 
+	{% load static %}
+	<link rel="stylesheet" href="{% static 'main/styles.css' %}">
+
+	
     <style type="text/css">
 		.sidenav {
 			height:100%;
@@ -42,16 +47,16 @@
 <body>
     <div class="sidenav">
 		<a href="/">Home</a>
-		<a href="/create">Create</a>
-		<a href="/view">View</a>
-		<a style="margin-top: auto;" href="/logout">Logout</a>
+		{% if user.is_authenticated %}
+			<a href="{% url 'logout' %}">Logout</a>
+		{% else %}
+			<a href="{% url 'login' %}">Login</a>
+		{% endif %}
 	</div>
     
     <div id="content" name="content" class="main">
 		<div class="row justify-content-center">
-			<div class="col-8">
-				<h1 class="mt-2">My Site</h1>
-				<hr class="mt-0 mb-4">
+			<div class="col-8" style="text-align: center;">
 				{% block content %}
 				{% endblock %}
 			</div>
