--- a/reservas/main/templates/main/home.html
+++ b/reservas/main/templates/main/home.html
@@ -9,8 +9,17 @@
 
 {% block content %}
 
-    <h1>
-        Todo List - Home
+    <h1 class="m-5" style="text-align: center;">
+        Nossas salas
     </h1>
+
+
+    <div class="portas">
+        {% for sala in salas.all %}
+        <div class="porta"><a href="{{sala.id}}" class="salas m-3" style="position: relative;"><i class="fa-solid fa-door-closed" style="font-size: 170px;"></i></a><span class="numeroSala">{{sala.numeroSalas}}</span></div>
+        {% endfor %}
+    </div>
+
+
 
 {% endblock %}
