--- a/reservas/main/templates/main/base.html
+++ b/reservas/main/templates/main/base.html
@@ -24,10 +24,17 @@
 			background-color:#111;
 			overflow-x: hidden;
 			padding-top:20px;
-		}    
+			display: flex;
+			align-items: center;
+			justify-content: start;
+			flex-direction: column;
+		}
+
+	
 
                 .sidenav a {
-			padding:6px 8px 6px 16px;
+			padding:8px;
+			margin-bottom: 15px;
 			text-decoration: none;
 			font-size:25px;
 			color: #818181;
@@ -48,19 +55,18 @@
     <div class="sidenav">
 		<a href="/">Home</a>
 		{% if user.is_authenticated %}
-			<a href="{% url 'logout' %}">Logout</a>
+		<form action="{% url 'logout' %}" method="post" style="display:inline;">
+			{% csrf_token %}
+			<button type="submit" class="btn btn-danger">Logout</button>
+		</form>
 		{% else %}
-			<a href="{% url 'login' %}">Login</a>
+			<a href="{% url 'login' %}"><button class="btn btn-primary">Login</button></a>
 		{% endif %}
 	</div>
     
-    <div id="content" name="content" class="main">
-		<div class="row justify-content-center">
-			<div class="col-8" style="text-align: center;">
+    <div class="main">
 				{% block content %}
 				{% endblock %}
-			</div>
-		</div>
 	</div>
 
 
