--- a/reservas/main/templates/main/base.html
+++ b/reservas/main/templates/main/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Todo List {% endblock %}</title>
+    <title>{% block title %}Reserva de salas{% endblock %}</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -52,6 +52,7 @@
     </style>
 </head>
 <body>
+
     <div class="sidenav">
 		<a href="/">Home</a>
 		{% if user.is_authenticated %}
@@ -63,11 +64,15 @@
 			<a href="{% url 'login' %}"><button class="btn btn-primary">Login</button></a>
 		{% endif %}
 	</div>
+	<div class="circle" id="circle1"></div>
+    <div class="circle" id="circle2"></div>
     
-    <div class="main">
-				{% block content %}
-				{% endblock %}
+    
+	<div class="container">
+		{% block content %}
+		{% endblock %}
 	</div>
+	
 
 
 	{% block scripts %}
