--- a/reservas/main/static/main/styles.css
+++ b/reservas/main/static/main/styles.css
@@ -11,11 +11,7 @@
     border-bottom: 2px solid white;
 }
 
-.requiredField{
-    color: white;
-}
-
-p, input{
+.requiredField, p{
     color: white;
 }
 
@@ -167,7 +163,7 @@ input,nav, button, card{
 input, nav{
     background-color: rgb(51, 51, 51) !important;
     border: none !important;
-    border: 12px;
+    color: white !important;
 }
  
 body{
