--- a/reservas/main/static/main/styles.css
+++ b/reservas/main/static/main/styles.css
@@ -18,6 +18,7 @@
 .andar{
     font-size: 30px;
     font-weight: bolder;
+    color: white;
     margin-right: 20px;
     
 }
@@ -44,8 +45,13 @@ label, .porta{
     color: white;
 }
 
+
 .porta{
     width: fit-content;
+}
+
+.salas:hover, .porta:hover{
+    color: rgb(163, 163, 163) !important;
 }
 
 .checkboxCadeiras:checked + label i{
@@ -56,6 +62,10 @@ label i{
     color: white;
 }
 
+label i:hover{
+    color: rgba(255, 199, 167, 0.959);
+}
+
 
 .checkboxCadeiras:checked + label span{
     color: white !important;
@@ -64,6 +74,11 @@ label i{
 .selecionada{
     color: grey !important;
 }
+
+.selecionadaPeloUsuario{
+    color: rgba(72, 158, 192, 0.959) !important;
+}
+
 .numeroBranco{
     color: white !important;
 }
